--- a/.local/bin/bar/news
+++ b/.local/bin/bar/news
@@ -4,4 +4,6 @@
 # Displays number of unread news items and an loading icon if updating.
 # When clicked, brings up `newsboat`.
 
-cat /tmp/newsupdate 2>/dev/null || echo "$(newsboat -x print-unread | awk '{ print "📰 " $1}' | sed s/^0$//g)$(cat ~/.config/newsboat/.update 2>/dev/null)"
+[ -f /tmp/newsupdate ] && echo $(cat ~/.config/newsboat/.unread | awk '{ print "📰 " $1}' | sed s/^0$//g) $(cat /tmp/newsupdate) && exit
+
+echo $(cat ~/.config/newsboat/.unread | awk '{ print "📰 " $1}' | sed s/^0$//g)
